[Issue 54] made photos three inches high on the print view, and added a directive not to page break in the middle of photos and comments

--- a/css/print.css
+++ b/css/print.css
@@ -23,3 +23,13 @@
     position: static !important;
     width: auto !important;
 }
+
+.visitPhoto img.thumbnail {
+	width:auto;
+	height:3in;
+	page-break-inside: avoid;
+}
+
+#logitem-list > li {
+	page-break-inside: avoid;
+}
